fix: String.format fix: sending packet with retry when peer host is null